# telegram-shop-bot

./: .env.example  .gitignore  README.md  docker-compose.yml
aiogram/: .gitignore  Dockerfile.dev  README.md  pyproject.toml  requirements.txt
aiogram/app/: callbacks.py  config.py  dev.py  filters.py  keyboards.py  main.py
aiogram/app/handlers/: __init__.py  admin_chat.py  cart.py  catalog.py  faq.py  messages.py  registration.py
aiogram/app/middlewares/: registration.py  subscription.py  update_logging.py
aiogram/app/storage/: cart.py  catalog.py  channels.py  internal_api.py  profiles.py
djg/: .gitignore  Dockerfile.dev  README.md  pyproject.toml  requirements.txt
djg/shop/botconfig/: __init__.py  admin.py  apps.py  models.py  signals.py  telegram_auth.py  views.py
djg/shop/botconfig/migrations/: 0001_initial.py  0002_telegramprofile.py  0003_catalog_models.py  0004_subcategory_refactor.py  0005_product_source_fields.py  0006_basketitem.py  0007_telegramprofile_photo_url.py  0008_order_orderitem.py  0009_alter_productimage_image_url.py  0010_remove_product_source_article_and_more.py  0011_order_payment_status.py  0012_faq_broadcast_botsettings.py  0013_botsettings_admin_telegram_ids.py  0014_usernotification.py
djg/shop/scripts/: import_wb_catalog.py
djg/shop/shop/: settings.py  urls.py
djg/shopcli/: __init__.py  manage.py
next/: Dockerfile.dev  README.md  next.config.ts  package-lock.json  package.json
next/app/: globals.css  layout.tsx  page.tsx
next/app/basket/: page.tsx
next/app/checkout/: page.tsx
next/app/payment/: page.tsx
next/lib/: basket.ts  http.ts  notifications.ts  telegram.ts  use-telegram-buttons.ts  use-telegram-webapp-user.ts
(+13 files in other folders)
