[project]
name = "djg"
version = "0.1.0"
description = ""
authors = [
    {name = "ro9aine"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django (==5.2.9)",
    "django-cors-headers (>=4.4,<5.0)",
    "djangorestframework (>=3.15,<4.0)",
    "psycopg[binary] (>=3.1,<4.0)",
    "python-dotenv (>=1.0,<2.0)",
    "pillow (>=10.0,<12.0)"
]

[tool.poetry]
packages = [
    { include = "shop", from = "shop" },
    { include = "botconfig", from = "shop" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
